feat: implementação para numeros repetidos

--- a/index.html
+++ b/index.html
@@ -9,7 +9,18 @@
 <body>
     <div class="background-container"></div>
     <div class="container">
-        <h1>Sorteio Calebe</h1>
+        <div class="image-row">
+            <div class="image-container">
+                <img src="logo_JA-Oficial.png" alt="Imagem Giratória">
+            </div>
+            <div class="image-container">
+                <img src="logo.png" alt="Imagem Giratória">
+            </div>
+            <div class="image-container">
+                <img src="Novo logo oficial - Missão Calebe - Português.png" alt="Imagem Giratória" style="background-color: #073a5c;">
+            </div>
+        </div>
+        <h1>Sorteio Minas</h1>
         <div class="card">
             <label for="minimo">Número Mínimo:</label>
             <input type="number" id="minimo" min="1" required>
